--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,10 +222,13 @@ button.batch-add:active {
 #player.hidden #current-thumb, #player.hidden button {
   opacity: 1;
 }
-#player.open {
+body[data-player="open"] {
+  overflow: hidden;
+}
+body[data-player="open"] #player {
   transform: none;
 }
-#player.open #player-bar button {
+body[data-player="open"] #player #player-bar button {
   display: none;
 }
 
@@ -272,20 +275,20 @@ button.batch-add:active {
   --this-color: #b7b7b7;
 }
 
-#player button.play {
+body[data-state="paused"] #player button.control {
   background:
     no-repeat linear-gradient(215deg, var(--button-bg) 0% 36%, transparent 38%) 50% 20% / 71% 100%,
     no-repeat linear-gradient(-35deg, var(--button-bg) 0% 36%, transparent 38%) 50% 80% / 71% 100%,
     no-repeat linear-gradient(var(--button-fg) 0% 100%) 70% 50% / 44% 95%,
     var(--button-bg);
 }
-#player button.pause {
+body[data-state="playing"] #player button.control {
   background:
     no-repeat linear-gradient(var(--button-fg) 0% 100%) 32% 50% / 13% 50%,
     no-repeat linear-gradient(var(--button-fg) 0% 100%) 68% 50% / 13% 50%,
     var(--button-bg);
 }
-#player button.buffering {
+body[body-state="buffering"] #player button.control {
   background:
     radial-gradient(8% 8% at 30% 50%, var(--button-fg) 80%, transparent),
     radial-gradient(8% 8% at 50% 50%, var(--button-fg) 80%, transparent),
@@ -340,9 +343,7 @@ button.batch-add:active {
   display: flex;
   justify-content: space-between;
 }
-#player-controls button.play,
-#player-controls button.pause,
-#player-controls button.buffering {
+#player-controls button.control {
   border-radius: 100vmax;
 }
 
@@ -400,7 +401,7 @@ button.batch-add:active {
   100% { box-shadow: 0px 0px 0px 4px transparent; }
 }
 
-body.playing .song.active img {
+body[data-state="playing"] .song.active img {
   animation-duration: 0.4s;
   animation-name: pulse;
   animation-iteration-count: infinite;
